@@ -3,6 +3,7 @@ Sastre 1.1 [June 19, 2020]
 
 New features:
     - Migrate task, allowing migration of feature templates and device templates to be compatible with vManage 20.1.
+    - Name-transform option added to list task, allowing user to test a name-regex transform against existing item names.
 
 Enhancements:
     - vManage information (address, user and password) is no longer required when a task uses local workdir as
